fix: align card_text on second card in section_five

--- a/style.css
+++ b/style.css
@@ -331,6 +331,9 @@ nav ul li a {
     border-radius: 10px;
     padding: 50px 20px 20px 20px;
 }
+#section_five .card_text_two{
+    margin-top: 15px;
+}
 #section_five .card_container h3 {
     font-size: 36px;
     margin-top: 40px;
